--- a/functions/views/pages/index.ejs
+++ b/functions/views/pages/index.ejs
@@ -8,27 +8,13 @@
 
     <!-- Caligrapy header -->
     <section class="row">
-      <!-- TODO: Insert caligraphy -->
+      <!-- TODO: Should this be a header tag? -->
+      <% include ../partials/header %>
     </section>
 
     <!-- Navigation links -->
     <section class="row">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-sm">
-            <a href="#wedding">Wedding</a>
-          </div>
-          <div class="col-sm">
-            <a href="#accomodations">Accomodations</a>
-          </div>
-          <div class="col-sm">
-            <a href="#registry">Registry</a>
-          </div>
-          <div class="col-sm">
-            <a href="#rsvp">RSVP</a>
-          </div>
-        </div>
-      </div>
+      <% include ../partials/navbar %>
     </section>
 
     <!-- Cover image -->
