--- a/functions/views/pages/index.ejs
+++ b/functions/views/pages/index.ejs
@@ -4,113 +4,120 @@
     <% include ../partials/head %>
   </head>
 
-  <body>
+  <body id="page-top">
 
-    <!-- Caligrapy header -->
-    <section class="row">
-      <!-- TODO: Insert caligraphy -->
-    </section>
-
-    <!-- Navigation links -->
-    <section class="row">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <div class="row text-center">
-          <div class="col-sm">
-            <a href="#wedding">Wedding</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Intro Header -->
+    <header class="masthead">
+      <div class="intro-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h1 class="brand-heading">Grayscale</h1>
+              <p class="intro-text">A free, responsive, one page Bootstrap theme.
+                <br>Created by Start Bootstrap.</p>
+              <a href="#about" class="btn btn-circle js-scroll-trigger">
+                <i class="fa fa-angle-double-down animated"></i>
+              </a>
+            </div>
           </div>
-          <div class="col-sm">
-            <a href="#accomodations">Accomodations</a>
-          </div>
-          <div class="col-sm">
-            <a href="#registry">Registry</a>
-          </div>
-          <div class="col-sm">
-            <a href="#rsvp">RSVP</a>
+        </div>
+      </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>About Grayscale</h2>
+            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
+              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+            <p>This theme features stock photos by
+              <a href="http://gratisography.com/">Gratisography</a>
+              along with a custom Google Maps skin courtesy of
+              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Cover image -->
-    <section class="row">
+    <!-- Download Section -->
+    <section id="download" class="download-section content-section text-center">
       <div class="container">
-        <img src="./assets/img/IMG_5132.jpeg" width="100%"/>
+        <div class="col-lg-8 mx-auto">
+          <h2>Download Grayscale</h2>
+          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
+          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+        </div>
       </div>
     </section>
 
-    <!-- Wedding date -->
-    <section class="row">
-      <div class="container text-center">
-        <p>
-          August 25, 2018
-        </p>
-      </div>
-    </section>
-
-    <!-- Wedding information -->
-    <section class="row" id="wedding">
-      <div class="container text-center">
-        <p>
-          Ceremony: Saturday August 25, 2018; 5:00 pm; Riverside Receptions &amp; Conference Center 35 North River Lane Geneva Illinois 60134
-        </p>
-        <p>
-          Join us for a reception immediately following the ceremony at Riverside Receptions &amp; Conference Center.
-        </p>
-        <p>
-          Pleast note, we will be having an Unplugged Ceremony. We will ask that you turn off all cameras, cell phones and other electronics until after the ceremony to be fully present during our special moment.
-        </p>
-        <p>
-          Attire Formal
-        </p>
-      </div>
-    </section>
-
-    <!-- Accomodations -->
-    <section class="row" id="accomodations">
-      <div class="container text-center">
-        <h2>Accomodations</h2>
-        <p>
-          A block of rooms has been reserved for our guests at a discounted rate. Please use the group code MILVOJ online or reference the Miles Vojak wedding when calling.
-        </p>
-        <p>
-          Transportation will be available for guests staying at Hilton Garden Inn. Transportation will leave the hotel at 4:15 pm to Riverside Receptions. Following the reception, transportation will return at 11:30 pm.
-        </p>
-        <!-- TODO: Photo of Hilton Garden Inn St. Charles logo with link to book room with group code -->
-        <!-- TODO: Address of hotel -->
-        <!-- TODO: Google map of where hotel is located -->
-
-        <p>
-          Parking A free parking lot is available across the street from Riverside Receptions. Street parking is also avaible.
-        </p>
-        <p>
-          Questions? Please contact <a href="mailto:milesvojakwedding@gmail.com">milesvojakwedding@gmail.com</a>
-        </p>
-      </div>
-    </section>
-
-    <!-- Registry -->
-    <section class="row" id="registry">
-      <div class="container text-center">
-        <h2>Registry</h2>
-        <!-- TODO: Use photos of each store to link to our registry -->
-        <div class="row text-center">
-          <div class="col-sm">
-            Bed Bath &amp; Beyond
-          </div>
-          <div class="col-sm">
-            Macy's
-          </div>
-          <div class="col-sm">
-            Crate &amp; Barrel
+    <!-- Contact Section -->
+    <section id="contact" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Contact Start Bootstrap</h2>
+            <p>Feel free to leave us a comment on the
+              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
+              on Start Bootstrap to give some feedback about this theme!</p>
+            <ul class="list-inline banner-social-buttons">
+              <li class="list-inline-item">
+                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
+                  <i class="fa fa-twitter fa-fw"></i>
+                  <span class="network-name">Twitter</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
+                  <i class="fa fa-github fa-fw"></i>
+                  <span class="network-name">Github</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
+                  <i class="fa fa-google-plus fa-fw"></i>
+                  <span class="network-name">Google+</span>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- Map Section -->
+    <div id="map"></div>
+
+    <footer>
+      <% include ../partials/footer %>
+    </footer>
 
   </body>
-
-  <footer>
-    <% include ../partials/footer %>
-  </footer>
 
 </html>
