--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -28,11 +28,13 @@ body {
 
 /* Caligraphy vectors */
 #caligraphy-desktop {
+  /* margin-top: 0%; */
   width: 100%;
   height: auto;
 }
 
 #caligraphy-mobile {
+  margin-top: 20%;
   width: 100%;
   height: auto;
 }
@@ -56,26 +58,149 @@ body {
 }
 
 /* Parallax effect */
-.parallax-img-1, .parallax-img-2, .parallax-img-3 {
+/* .parallax-img-1, .parallax-img-2, .parallax-img-3 {
   position: relative;
-  opacity: 0.6;
+  opacity: 0.8;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+} */
+
+body:after {
+  content:"";
+  position:fixed;
+  top:0;
+  height:100vh;
+  left:0;
+  right:0;
+  z-index:-1;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.75),
+      rgba(255, 255, 255, 0.75)
+    ), url(../img/lake.jpg) center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-.parallax-img-1 {
-  background-image: url("../img/lake.jpg");
+/* body.scrolled1:after {
+  content:"";
+  position:fixed;
+  top:0;
+  height:100vh;
+  left:0;
+  right:0;
+  z-index:-1;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.75),
+      rgba(255, 255, 255, 0.75)
+    ), url(../img/coffee.jpg) center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+body.scrolled2:after {
+  content:"";
+  position:fixed;
+  top:0;
+  height:100vh;
+  left:0;
+  right:0;
+  z-index:-1;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.75),
+      rgba(255, 255, 255, 0.75)
+    ), url(../img/lake.jpg) center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+body.scrolled3:after {
+  content:"";
+  position:fixed;
+  top:0;
+  height:100vh;
+  left:0;
+  right:0;
+  z-index:-1;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.75),
+      rgba(255, 255, 255, 0.75)
+    ), url(../img/ring.jpg) center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
+
+.parallax-img-1::after, .parallax-img-2::after, .parallax-img-3::after {
+  /* content:"";
+  position:fixed;
+  top:0;
+  height:100vh;
+  left:0;
+  right:0;
+  z-index:-1;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.75),
+      rgba(255, 255, 255, 0.75)
+    ), url(../img/lake.jpg) center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; */
+}
+
+.parallax-img-1::after {
+  /* background-image: url("../img/lake.jpg"); */
+  /* background: linear-gradient(
+      rgba(255, 255, 255, 0.75),
+      rgba(255, 255, 255, 0.75)
+    ), url(../img/lake.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; */
+  /* background-size: cover; */
+
   min-height: 100%;
+  /* z-index:-1; */
 }
 
-.parallax-img-2 {
-  background-image: url("../img/coffee.jpg");
+.parallax-img-2::after {
+  /* background-image: url("../img/coffee.jpg"); */
+  /* background: linear-gradient(
+      rgba(255, 255, 255, 0.75),
+      rgba(255, 255, 255, 0.75)
+    ), url(../img/coffee.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; */
+  /* background-size: cover; */
+
   min-height: 600px;
+  /* z-index:-2; */
 }
 
-.parallax-img-3 {
-  background-image: url("../img/ring.jpg");
+.parallax-img-3::after {
+  /* background-image: url("../img/ring.jpg"); */
+  /* background: linear-gradient(
+      rgba(255, 255, 255, 0.75),
+      rgba(255, 255, 255, 0.75)
+    ), url(../img/ring.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; */
+  /* background-size: cover; */
+
   min-height: 600px;
+  /* z-index:-3; */
 }
