--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -52,7 +52,7 @@ a {
   margin-bottom: 0;
   text-transform: uppercase;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  background-color: black; 
+  background-color: black;
 }
 #mainNav .navbar-toggler {
   font-size: 14px;
@@ -154,12 +154,13 @@ a {
 
 .download-section {
   color: white;
-  background: url("../img/downloads-bg.jpg") no-repeat center center scroll;
+  /* background: url("../img/downloads-bg.jpg") no-repeat center center scroll; */
   /* background-color: black; */
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
+  /* -webkit-background-size: cover; */
+  /* -moz-background-size: cover; */
+  /* -o-background-size: cover; */
+  /* background-size: cover;  */
+}
 
 #map {
   width: 100%;
