--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -51,8 +51,8 @@ a {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin-bottom: 0;
   text-transform: uppercase;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  background-color: black;
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.3); */
+  /* background-color: black; */
 }
 #mainNav .navbar-toggler {
   font-size: 14px;
@@ -89,17 +89,22 @@ a {
       transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
       letter-spacing: 1px;
       border-bottom: none;
-      background: transparent; }
-      #mainNav.navbar-shrink {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-        background: black; }
-      #mainNav .nav-link.active {
-        outline: none;
-        background-color: rgba(255, 255, 255, 0.3); }
-        #mainNav .nav-link.active:hover {
-          color: white; } }
+      background: transparent;
+    }
+    #mainNav.navbar-shrink {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      /* border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+      background: black; */
+    }
+    #mainNav .nav-link.active {
+      outline: none;
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+    #mainNav .nav-link.active:hover {
+      color: white;
+    }
+  }
 
 .masthead {
   display: table;
