--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -50,6 +50,10 @@ body:after {
   width: 100%;
 }
 
+nav.sticky.is-sticky {
+  background-color: rgba(255, 255, 255, 0.75) !important;
+}
+
 /* Caligraphy vectors */
 #caligraphy-desktop {
   /* margin-top: 0%; */
