--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -80,31 +80,31 @@ a {
   outline: none;
   background-color: transparent;
 }
-  @media (min-width: 992px) {
-    #mainNav {
-      padding-top: 20px;
-      padding-bottom: 20px;
-      -webkit-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
-      -moz-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
-      transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
-      letter-spacing: 1px;
-      border-bottom: none;
-      background: transparent;
-    }
-    #mainNav.navbar-shrink {
-      padding-top: 10px;
-      padding-bottom: 10px;
-      /* border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-      background: black; */
-    }
-    #mainNav .nav-link.active {
-      outline: none;
-      background-color: rgba(255, 255, 255, 0.3);
-    }
-    #mainNav .nav-link.active:hover {
-      color: white;
-    }
+@media (min-width: 992px) {
+  #mainNav {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    -webkit-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
+    -moz-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
+    transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
+    letter-spacing: 1px;
+    border-bottom: none;
+    background: transparent;
   }
+  #mainNav.navbar-shrink {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    /* border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    background: black; */
+  }
+  #mainNav .nav-link.active {
+    outline: none;
+    background-color: rgba(0, 0, 0, 0.07); /* TODO: Update this to be visible */
+  }
+  #mainNav .nav-link.active:hover {
+    color: white;
+  }
+}
 
 .masthead {
   display: table;
@@ -118,22 +118,30 @@ a {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; }
-  .masthead .intro-body {
-    display: table-cell;
-    vertical-align: middle; }
-    .masthead .intro-body .brand-heading {
-      font-size: 50px; }
-    .masthead .intro-body .intro-text {
-      font-size: 18px; }
-  @media (min-width: 768px) {
-    .masthead {
-      height: 100%;
-      padding: 0; }
-      .masthead .intro-body .brand-heading {
-        font-size: 100px; }
-      .masthead .intro-body .intro-text {
-        font-size: 22px; } }
+  background-size: cover;
+}
+.masthead .intro-body {
+  display: table-cell;
+  vertical-align: middle;
+}
+.masthead .intro-body .brand-heading {
+  font-size: 50px;
+}
+.masthead .intro-body .intro-text {
+  font-size: 18px;
+}
+@media (min-width: 768px) {
+  .masthead {
+    height: 100%;
+    padding: 0;
+  }
+  .masthead .intro-body .brand-heading {
+    font-size: 100px;
+  }
+  .masthead .intro-body .intro-text {
+    font-size: 22px;
+  }
+}
 
 .btn-circle {
   font-size: 26px;
@@ -151,11 +159,13 @@ a {
   .btn-circle:focus, .btn-circle:hover {
     color: white;
     outline: none;
-    background: rgba(255, 255, 255, 0.1); }
+    background: rgba(255, 255, 255, 0.1);
+  }
 
 .content-section {
   padding-top: 150px;
-  padding-bottom: 150px; }
+  padding-bottom: 150px;
+}
 
 .download-section {
   color: white;
@@ -174,9 +184,12 @@ a {
 @media (min-width: 992px) {
   .content-section {
     padding-top: 200px;
-    padding-bottom: 200px; }
+    padding-bottom: 200px;
+  }
   #map {
-    height: 350px; } }
+    height: 350px;
+  }
+}
 
 .btn {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
