Fix hyperlink font color

--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -42,10 +42,12 @@ a {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  color: #42DCA3; }
-  a:focus, a:hover {
-    text-decoration: none;
-    color: #1d9b6c; }
+  color: #4A708B;
+}
+a:focus, a:hover {
+  text-decoration: none;
+  color: #7EC0EE;
+}
 
 #mainNav {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
