--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -68,7 +68,7 @@ a:focus, a:hover {
   font-weight: 700;
 }
 #mainNav a {
-  color: white;
+  /* color: white; */
 }
 #mainNav .navbar-nav .nav-item {
   -webkit-transition: background 0.3s ease-in-out;
@@ -103,7 +103,7 @@ a:focus, a:hover {
   }
   #mainNav .nav-link.active {
     outline: none;
-    background-color: rgba(0, 0, 0, 0.07); /* TODO: Update this to be visible */
+    /* background-color: rgba(0, 0, 0, 0.07); */
   }
   #mainNav .nav-link.active:hover {
     color: white;
