--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -107,3 +107,15 @@ section h2 {
     display: none;
   }
 }
+
+/* RSVP Embedded */
+#rsvp-embed {
+  padding-top: 5px;
+  height: 100%;
+}
+
+@media (max-width: 991px) {
+  .caligraphy-wrapper {
+    margin-bottom: 15px;
+  }
+}
