--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,10 +1,12 @@
-/* Custom CSS to supplement or override the template */
-
+/*
+  ======================================================
+  Cover
+  ======================================================
+*/
 body {
   background-color: #E5E5E5;
 }
 
-/* Cover background image */
 body:after {
   content:"";
   position:fixed;
@@ -23,9 +25,13 @@ body:after {
   background-size: cover;
 }
 
-/* Navbar */
+/*
+  ======================================================
+  Navbar
+  ======================================================
+*/
+/* General navbar styling */
 .navbar .navbar-nav {
-  /* display: inline-block; */
   float: none;
   vertical-align: top;
   text-align: center;
@@ -34,11 +40,6 @@ body:after {
 .navbar .navbar-collapse {
   text-align: center;
 }
-
-/* .navbar-light {
-  background-color: transparent;
-  border-bottom: 0px;
-} */
 
 /* Sticky navbar */
 .sticky.is-sticky {
@@ -50,32 +51,18 @@ body:after {
   width: 100%;
 }
 
-/* @media (min-width: 992px) { */
-  nav.sticky.is-sticky {
-    background-color: rgba(255, 255, 255, 0.75) !important;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2) !important;
-  }
+/* Styling when the navbar is in a sticky state */
+nav.sticky.is-sticky {
+  background-color: rgba(255, 255, 255, 0.75) !important;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2) !important;
+}
 
-  a.nav-link {
-    /* color:black; */
-  }
-/* } */
-/* @media (max-width: 991px) {
-  nav.sticky.is-sticky {
-    background-color: transparent;
-  }
-  div.navbar-collapse.collapse.show {
-    background-color: rgba(255, 255, 255, 0.75) !important;
-  }
-  div.navbar-collapse.collapsing {
-    background-color: rgba(255, 255, 255, 0.75) !important;
-  }
-} */
-
-
-/* calligraphy vectors */
+/*
+  ======================================================
+  Calligraphy
+  ======================================================
+*/
 #calligraphy-desktop {
-  /* margin-top: 0%; */
   width: 100%;
   height: auto;
 }
@@ -84,6 +71,11 @@ body:after {
   margin-top: 20%;
   width: 100%;
   height: auto;
+}
+
+/* Add some spacing between navbar and calligraphy on the home page */
+header #calligraphy-desktop {
+  margin-bottom: 300px;
 }
 
 /* Section heading calligraphy */
@@ -120,7 +112,20 @@ section img {
   }
 }
 
-/* Registry Links */
+/*
+  ======================================================
+  Accommodations Section
+  ======================================================
+*/
+#hotel-vector {
+  width: 200px;
+}
+
+/*
+  ======================================================
+  Registry Section
+  ======================================================
+*/
 .registry-link {
   margin-top: 12px;
   margin-bottom: 12px;
@@ -135,7 +140,11 @@ section img {
     align-items: center;
 }
 
-/* RSVP Embedded */
+/*
+  ======================================================
+  RSVP Page
+  ======================================================
+*/
 #rsvp-embed {
   padding-top: 5px;
   height: 100%;
