--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -4,7 +4,9 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
  */
 body {
-  font-family: 'Lora', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  /* font-family: 'Lora', 'Helvetica Neue', Helvetica, Arial, sans-serif; */
+  font-family: 'Alegreya', serif;
+
   position: relative;
   width: 100%;
   height: 100%;
@@ -22,7 +24,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  /* font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif; */
   font-weight: 700;
   margin: 0 0 35px;
   letter-spacing: 1px;
@@ -31,12 +33,15 @@ h6 {
 p {
   font-size: 16px;
   line-height: 1.5;
-  margin: 0 0 25px; }
+  /* margin: 0 0 25px;  */
+}
   @media (min-width: 768px) {
     p {
       font-size: 18px;
       line-height: 1.6;
-      margin: 0 0 35px; } }
+      /* margin: 0 0 35px;  */
+      }
+    }
 
 a {
   -webkit-transition: all 0.2s ease-in-out;
@@ -50,14 +55,16 @@ a:focus, a:hover {
 }
 
 #mainNav {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  /* font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif; */
+  font-family: 'Alegreya SC', serif;
+  font-size: 18px;
   margin-bottom: 0;
   text-transform: uppercase;
   /* border-bottom: 1px solid rgba(255, 255, 255, 0.3); */
   /* background-color: black; */
 }
 #mainNav .navbar-toggler {
-  font-size: 14px;
+  font-size: 16px;
   padding: 11px;
   /* color: white; */
   color: rgba(0, 0, 0, .5);
