--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -25,14 +25,6 @@ body:after {
   background-size: cover;
 }
 
-h3 {
-  font-weight: 400;
-  font-size: 16px;
-  font-style: italic;
-  font-family: 'Alegreya SC', serif;
-  margin: 35px 0 35px;
-}
-
 /*
   ======================================================
   Navbar
@@ -125,6 +117,23 @@ section img {
 
 /*
   ======================================================
+  Text content
+  ======================================================
+*/
+h3 {
+  font-weight: 400;
+  font-size: 16px;
+  font-style: italic;
+  font-family: 'Alegreya SC', serif;
+  margin: 30px 0 7px;
+}
+
+p {
+  margin: 0 0 30px;
+}
+
+/*
+  ======================================================
   Accommodations Section
   ======================================================
 */
@@ -158,6 +167,10 @@ section img {
 */
 #rsvp-button {
   margin-bottom: 50px;
+}
+
+#meals-header {
+  margin-bottom: 10px;
 }
 
 /*
