--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -57,6 +57,11 @@ nav.sticky.is-sticky {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2) !important;
 }
 
+/* Fix font color on hover for links that are active */
+a.nav-link:hover {
+  color: #000000 !important;
+}
+
 /*
   ======================================================
   Calligraphy
